--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,27 @@
 
 <head>
     ${head}
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
+        window.$crisp = [];
+        window.CRISP_WEBSITE_ID = "1a5a5241-91cb-4a41-8323-5ba5ec574da0";
+        (function() {
+            d = document;
+            s = d.createElement("script");
+            s.src = "https://client.crisp.chat/l.js";
+            s.async = 1;
+            d.getElementsByTagName("head")[0].appendChild(s);
+        })();
+    </script> -->
+
+    <!-- Cookie Consent by https://www.FreePrivacyPolicy.com -->
+<script type="text/javascript"
+src="//www.freeprivacypolicy.com/public/cookie-consent/3.1.0/cookie-consent.js"></script>
+<script
+type="text/javascript"> document.addEventListener('DOMContentLoaded', function () { cookieconsent.run({ "notice_banner_type": "headline", "consent_type": "express", "palette": "light", "language": "en", "website_name": "https://threefold.io/cloud", "website_privacy_policy_url":"https://threefold.io/info/legal#/legal__privacypolicy" }); });</script>
+
+
+<!-- Crisp -->
+  <script type="text/plain" cookie-consent="functionality">
         window.$crisp = [];
         window.CRISP_WEBSITE_ID = "1a5a5241-91cb-4a41-8323-5ba5ec574da0";
         (function() {
@@ -14,6 +34,29 @@
             d.getElementsByTagName("head")[0].appendChild(s);
         })();
     </script>
+<!-- end of Crisp-->
+
+<!-- Matomo -->
+<!-- Matomo -->
+<script type="text/plain" cookie-consent="tracking">
+  var _paq = window._paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//analytics.threefold.io/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '6']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Code -->
+<!-- end of Matomo-->
+
+<noscript>Cookie Consent by <a href="https://www.FreePrivacyPolicy.com/free-cookie-consent/" rel="nofollow noopener">FreePrivacyPolicy.com</a></noscript>
+<!-- End Cookie Consent -->
+
     <!-- MailerLite Universal -->
     <script>
         (function(m, a, i, l, e, r) {
