--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,6 @@
 
 <head>
     ${head}
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <!-- <script type="text/javascript">
         window.$crisp = [];
         window.CRISP_WEBSITE_ID = "1a5a5241-91cb-4a41-8323-5ba5ec574da0";
@@ -19,14 +16,14 @@
     </script> -->
 
     <!-- Cookie Consent by https://www.FreePrivacyPolicy.com -->
-    <script type="text/javascript"
-        src="//www.freeprivacypolicy.com/public/cookie-consent/3.1.0/cookie-consent.js"></script>
-    <script
-        type="text/javascript"> document.addEventListener('DOMContentLoaded', function () { cookieconsent.run({ "notice_banner_type": "headline", "consent_type": "express", "palette": "light", "language": "en", "website_name": "https://threefold.io/cloud", "website_privacy_policy_url": "https://threefold.io/info/legal#/legal__privacypolicy" }); });</script>
+<script type="text/javascript"
+src="//www.freeprivacypolicy.com/public/cookie-consent/3.1.0/cookie-consent.js"></script>
+<script
+type="text/javascript"> document.addEventListener('DOMContentLoaded', function () { cookieconsent.run({ "notice_banner_type": "headline", "consent_type": "express", "palette": "light", "language": "en", "website_name": "https://threefold.io/cloud", "website_privacy_policy_url":"https://threefold.io/info/legal#/legal__privacypolicy" }); });</script>
 
 
-    <!-- Crisp -->
-    <script type="text/plain" cookie-consent="functionality">
+<!-- Crisp -->
+  <script type="text/plain" cookie-consent="functionality">
         window.$crisp = [];
         window.CRISP_WEBSITE_ID = "1a5a5241-91cb-4a41-8323-5ba5ec574da0";
         (function() {
@@ -37,11 +34,11 @@
             d.getElementsByTagName("head")[0].appendChild(s);
         })();
     </script>
-    <!-- end of Crisp-->
+<!-- end of Crisp-->
 
-    <!-- Matomo -->
-    <!-- Matomo -->
-    <script type="text/plain" cookie-consent="tracking">
+<!-- Matomo -->
+<!-- Matomo -->
+<script type="text/plain" cookie-consent="tracking">
   var _paq = window._paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
   _paq.push(['trackPageView']);
@@ -54,16 +51,15 @@
     g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-    <!-- End Matomo Code -->
-    <!-- end of Matomo-->
+<!-- End Matomo Code -->
+<!-- end of Matomo-->
 
-    <noscript>Cookie Consent by <a href="https://www.FreePrivacyPolicy.com/free-cookie-consent/"
-            rel="nofollow noopener">FreePrivacyPolicy.com</a></noscript>
-    <!-- End Cookie Consent -->
+<noscript>Cookie Consent by <a href="https://www.FreePrivacyPolicy.com/free-cookie-consent/" rel="nofollow noopener">FreePrivacyPolicy.com</a></noscript>
+<!-- End Cookie Consent -->
 
     <!-- MailerLite Universal -->
     <script>
-        (function (m, a, i, l, e, r) {
+        (function(m, a, i, l, e, r) {
             m["MailerLiteObject"] = e;
 
             function f() {
