--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <script type="text/javascript"
         src="//www.freeprivacypolicy.com/public/cookie-consent/3.1.0/cookie-consent.js"></script>
     <script
-        type="text/javascript"> document.addEventListener('DOMContentLoaded', function () { cookieconsent.run({ "notice_banner_type": "headline", "consent_type": "express", "palette": "light", "language": "en", "website_name": "https://threefold.io/cloud", "website_privacy_policy_url": "https://threefold.io/info/legal#/legal__privacypolicy" }); });</script>
+        type="text/javascript"> document.addEventListener('DOMContentLoaded', function () { cookieconsent.run({ "notice_banner_type": "headline", "consent_type": "express", "palette": "light", "language": "en", "website_name": "https://threefold.io/cloud", "website_privacy_policy_url": "https://library.threefold.me/info/legal/#/legal__privacypolicy" }); });</script>
 
 
     <!-- Crisp -->
