--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,47 @@
     </script> -->
 
     <!-- Cookie Consent by https://www.FreePrivacyPolicy.com -->
-    <script type="text/javascript"
+    <!-- <script type="text/javascript"
         src="//www.freeprivacypolicy.com/public/cookie-consent/3.1.0/cookie-consent.js"></script>
     <script
-        type="text/javascript"> document.addEventListener('DOMContentLoaded', function () { cookieconsent.run({ "notice_banner_type": "headline", "consent_type": "express", "palette": "light", "language": "en", "website_name": "https://threefold.io/cloud", "website_privacy_policy_url": "https://library.threefold.me/info/legal/#/legal__privacypolicy" }); });</script>
+        type="text/javascript"> document.addEventListener('DOMContentLoaded', function () { cookieconsent.run({ "notice_banner_type": "headline", "consent_type": "express", "palette": "light", "language": "en", "website_name": "https://threefold.io/cloud", "website_privacy_policy_url": "https://library.threefold.me/info/legal/#/legal__privacypolicy" }); });
+    </script> -->
+
+    <!-- Cookie Consent by https://www.FreePrivacyPolicy.com -->
+    <script type="text/javascript" src="//www.freeprivacypolicy.com/public/cookie-consent/4.0.0/cookie-consent.js"
+        charset="UTF-8"></script>
+    <script type="text/javascript" charset="UTF-8">
+        document.addEventListener('DOMContentLoaded', function () {
+            cookieconsent.run({ "notice_banner_type": "headline", "consent_type": "implied", "palette": "light", "language": "en", "page_load_consent_levels": ["strictly-necessary", "functionality", "tracking", "targeting"], "notice_banner_reject_button_hide": false, "preferences_center_close_button_hide": false, "open_preferences_center_selector": "https://library.threefold.me/info/legal/#/legal__privacypolicy" });
+        });
+    </script>
+
+    <!-- Matomo Tag Manager -->
+    <script type="text/javascript">
+        var _mtm = window._mtm = window._mtm || [];
+        _mtm.push({ 'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start' });
+        var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+        g.type = 'text/javascript'; g.async = true; g.src = 'https://analytics.threefold.io/js/container_DeDaLrIw.js'; s.parentNode.insertBefore(g, s);
+    </script>
+    <!-- End Matomo Tag Manager -->
+
+
+    <!-- Matomo -->
+    <script type="text/plain" cookie-consent="strictly-necessary">
+  var _paq = window._paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//analytics.threefold.io/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '6']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+    <!-- End Matomo Code -->
+
 
 
     <!-- Crisp -->
@@ -39,26 +76,10 @@
     </script>
     <!-- end of Crisp-->
 
-    <!-- Matomo -->
-    <!-- Matomo -->
-    <script type="text/plain" cookie-consent="tracking">
-  var _paq = window._paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//analytics.threefold.io/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '6']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-    <!-- End Matomo Code -->
-    <!-- end of Matomo-->
 
-    <noscript>Cookie Consent by <a href="https://www.FreePrivacyPolicy.com/free-cookie-consent/"
-            rel="nofollow noopener">FreePrivacyPolicy.com</a></noscript>
+
+    <noscript>Cookie Consent by <a href="https://www.freeprivacypolicy.com/free-privacy-policy-generator/"
+            rel="nofollow noopener">Free Privacy Policy website</a></noscript>
     <!-- End Cookie Consent -->
 
     <!-- MailerLite Universal -->
