--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,6 @@
         })();
     </script> -->
 
-    <!-- Cookie Consent by https://www.FreePrivacyPolicy.com -->
-    <!-- <script type="text/javascript"
-        src="//www.freeprivacypolicy.com/public/cookie-consent/3.1.0/cookie-consent.js"></script>
-    <script
-        type="text/javascript"> document.addEventListener('DOMContentLoaded', function () { cookieconsent.run({ "notice_banner_type": "headline", "consent_type": "express", "palette": "light", "language": "en", "website_name": "https://threefold.io/cloud", "website_privacy_policy_url": "https://library.threefold.me/info/legal/#/legal__privacypolicy" }); });
-    </script> -->
 
     <!-- Cookie Consent by https://www.FreePrivacyPolicy.com -->
     <script type="text/javascript" src="//www.freeprivacypolicy.com/public/cookie-consent/4.0.0/cookie-consent.js"
@@ -45,7 +39,7 @@
 
 
     <!-- Matomo -->
-    <script type="text/plain" cookie-consent="strictly-necessary">
+    <script type="text/javascript" cookie-consent="strictly-necessary">
   var _paq = window._paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
   _paq.push(['trackPageView']);
@@ -63,7 +57,7 @@
 
 
     <!-- Crisp -->
-    <script type="text/plain" cookie-consent="functionality">
+    <script type="text/javascript" cookie-consent="functionality">
         window.$crisp = [];
         window.CRISP_WEBSITE_ID = "1a5a5241-91cb-4a41-8323-5ba5ec574da0";
         (function() {
@@ -78,8 +72,8 @@
 
 
 
-    <noscript>Cookie Consent by <a href="https://www.freeprivacypolicy.com/free-privacy-policy-generator/"
-            rel="nofollow noopener">Free Privacy Policy website</a></noscript>
+    <!-- <noscript>Cookie Consent by <a href="https://www.freeprivacypolicy.com/free-privacy-policy-generator/"
+            rel="nofollow noopener">Free Privacy Policy website</a></noscript> -->
     <!-- End Cookie Consent -->
 
     <!-- MailerLite Universal -->
